Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReferenceNoThisTest.out
MethodReferenceNoThisTest.java:22:15: compiler.err.cant.ref.before.ctor.called: this
1 error